--- a/Css/Style.css
+++ b/Css/Style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     /*background-color: rgb(218, 246, 255);*/
-    font-style: italic;
+    font-family: 'Kanit', sans-serif;
 }
 body{
     background-color: rgb(218, 246, 255);
