--- a/Css/Style.css
+++ b/Css/Style.css
@@ -5,7 +5,7 @@
     font-family: 'Kanit', sans-serif;
 }
 body{
-    background-color: rgb(218, 246, 255);
+    background-color: #eededa;
 }
 /* Titulo*/
 .Titulo{
@@ -19,156 +19,101 @@ body{
 
 
 /* Inicio barra navegación*/
-.Menu__Logo{
-    width: 150px;
-}
-nav{
-    position: fixed;
+.Menu__Container{
+    background-color: white;
+    border: rgba(133, 133, 133, 0.1) solid 2px;
+    display: flex;
     width: 100%;
-}
-.Menu{ 
-    background-color: #DC0A2D;
-    padding: 2px;
-    text-decoration: none;
-}
-.Menu__Completo{
-    display: flex;
     justify-content: space-between;
-}
-.Menu__Principal{
-    display: flex;
     align-items: center;
+    padding-top: 8.5px;
+    padding-bottom: 8.5px;
+    position: fixed;
 }
-.Menu__Wallet{
+.Menu__Container__Nav{
     display: flex;
-    align-items: center;
 }
-.Menu__Button{
-    background-color: black;
-    padding: 10px 10px 10px 10px;
-    margin-right: 20px;
-    border-radius: 15px;
-    font-family: 'Digital Numbers', sans-serif;
-    color: green;
+.Menu__Logo{ 
+    width: 120px;   
 }
-.Menu__Desplegable{
-    position: relative;
-    display: inline-block;
+.Menu__Container__Rigth{
+    display: flex;
+}
+.Menu__Icono{
+    background-color: white;
+    border: none;
+    font-size: 20px;
+    color: rgb(222, 37, 73);
     cursor: pointer;
 }
-.Menu__Desplegado{
-    display: none;
-    position: absolute;
-    background-color: #000000;
-    min-width: 160px;
-    padding: 12px 16px;
-    z-index: 1;
-    border-radius: 20px;
-    margin-top: 10px;
-}
-.Menu__Desplegable:hover .Menu__Desplegado{
-    display: block;
-}
-.Menu__Desplegado__Link{
-    text-align: center;
-    padding: 10px;
-}
-.Menu__Desplegado__Estilo{
-    color: green;
-    font-family: 'Digital Numbers', sans-serif;
-    font-size: 12px;
-    text-decoration: none;
-}
-.Menu__Para__Celular{
-    position: fixed;
-    visibility: hidden;
-}
-@media only screen and (max-width: 1000px)
-{
-    .Menu__Celular{
-        position: fixed;
-        visibility: hidden;
-    }
-    .Menu__Para__Celular{
-        position: relative;
-        visibility: visible;
-    }
-    .Menu__Desplegable{
-        position: fixed;
-        display: none;
-        cursor: none;
-    }
-    .Menu__Desplegado{
-        display: none;
-        position: none;
-        background-color: none;
-        min-width: none;
-        padding: none;
-        z-index: none;
-        border-radius: none;
-    }
-    .Menu__Desplegable:hover .Menu__Desplegado{
-        display: none;
-    }
-    .Menu__Desplegado__Link{
-        text-align: none;
-        padding: none;
-        display: flex;
-    }
-    
-    
-
-
-
-    .Menu__Celular__Desplegable{
-        position: relative;
-        display: inline-block;
-        cursor: pointer;
-    }
-    .Menu__Celular__Desplegado{
-        display: none;
-        position: absolute;
-        background-color: #000000;
-        min-width: 1500px 300px;
-        padding: 100px 20px;
-        z-index: 1;
-        border-radius: 20px;
-    }
-    .Menu__Celular__Desplegable:hover .Menu__Celular__Desplegado{
-        display: block;
-    }
-    .Menu__Celular__Estilo{
-        padding: 0px 30px 30px 30px;
-    }
-
+.Menu__Button__Wallet{
+    background-color: rgb(222, 37, 73);
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    border-radius: 16px;
+    border: none;
+    cursor: pointer;
 }
 /*Fin Barra Navegación*/
 
 /*Inicio SubMenu Exchange*/
-.SubMenu{
-    background-color: aliceblue;
-    padding-top: 25px;
-    text-align: center;
+.Menu__Left{
+    background-color: white;
+    flex-direction: column;
+    font-size: 20px;
+    text-decoration: none;
+    padding-top: 10px;
+    height: 900px;
+    position: fixed;
+    border: rgba(133, 133, 133, 0.1) solid 0px 2px 2px 2px;
+    margin-top: 65px;
+}
+.Menu__Left__Estilo{
+    text-decoration: none;
+    color: black;
+    display: flex;
+    flex-direction: column;
+}
+.Menu__Left__Estilo2{
+    text-decoration: none;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    padding-top: 0px;
+    margin-top: 20px;
+}
+.Display{
+    display: flex;
+}
+
+.Menu__Left__Icono{
+    padding: 15px;
+}
+.Dromsi{
+    margin-top: 54px;
+    left: -150px;
+    position: fixed;
+    background-color: white;
+    font-size: 20px;
+    text-decoration: none;
+    height: 900px;
+    transition: left 0.7s;
     padding-bottom: 10px;
+    border: rgba(133, 133, 133, 0.1) solid 0px 2px 2px 2px;
 }
-.SubMenuSombra{
-    padding: 5px 0px 5px 0px;
-    border-radius: 15px;
-    background-color: #DC0A2D;
+.checkbox:checked ~ .Dromsi{
+    left: 55px;
 }
-.SubMenuOn{
-    background-color: #000000;
-    color: green;
-    border-radius: 15px;
-    padding: 5px 10px 5px 10px;
-
+.Menu__Left__Animation:hover {
+    background-color: rgb(180, 180, 180);
 }
-.SubMenuOff{
-    color: rgb(182, 237, 255);
-    background-color: #DC0A2D;
-    border-radius: 15px;
 
-
+.checkbox:checked ~ .Menu__Left__Absolute{
+    left: 15%;
+}
+.Menu__Left__Switch__On{
+    border-left: 3px red solid;
 }
 
 /*Fin SubMenu*/
@@ -181,9 +126,10 @@ nav{
     height: 518px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2%;
     border-radius: 20px;
-    background-color: aliceblue;
+    background-color: white;
+    margin-bottom: 20%;
+    margin-top: 5%;
 }
 .Swap__Titulo__Completo{
     border-bottom: 1px solid rgb(231, 227, 235);
@@ -196,7 +142,7 @@ nav{
 
 }
 .Swap__Icono{
-    background-color: aliceblue;
+    background-color: white;
     border: none;
     font-size: 20px;
     cursor: pointer;
@@ -213,7 +159,7 @@ nav{
     padding: 24px;
 }
 .Swap__Container__Amount{
-    background-color: rgb(122, 110, 170);
+    background-color: #eededa;
     border-radius: 10px;        
 }
 .Swap__Max{
@@ -229,7 +175,7 @@ nav{
     width: 100%;
     text-align: right;
     border: none;
-    background-color: rgb(122, 110, 170) ;
+    background-color: #eededa ;
 }
 .Swap__Button{
     text-align: center;
@@ -238,7 +184,7 @@ nav{
     border: none;
     font-size: 30px;
     padding: 12px 0px 12px 0px;
-    background-color: aliceblue;
+    background-color: white;
 }
 .Swap__Container__Sli{
     display: flex;
@@ -807,3 +753,6 @@ article img{
         
     
      /*Fin Cuadro Pagina Inicial*/
+
+
+
