--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,233 +1,197 @@
+.link__decoration {
+  text-decoration: none;
+  color: white; }
+
+.container__subnav {
+  margin-top: 60px;
+  padding: 1rem 1rem 0rem 1rem; }
+  .container__subnav .subnav {
+    text-decoration: none;
+    color: black;
+    margin: 0px 5px 0px 5px;
+    font-weight: bold; }
+  .container__subnav .subnav__on {
+    color: #dc3545;
+    border-bottom: #dc3545 solid 4px; }
+
 /*Incio Swap*/
+.Swap__Container {
+  border: 1px solid #e7e3eb;
+  width: 328px;
+  /*height: 518px;*/
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px;
+  background-color: white;
+  margin-bottom: 0%;
+  margin-top: 2%; }
 
-.Swap__Container{
-    border: 1px solid rgb(231, 227, 235);
-    width: 328px;
-    /*height: 518px;*/
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 20px;
-    background-color: white;
-    margin-bottom: 0%;
-    margin-top: 2%;
-}
-.Swap__Titulo__Completo{
-    border-bottom: 1px solid rgb(231, 227, 235);
-    padding: 24px;
-    text-align: center;
-}
-.Swap__Titulo{
-    display: flex;
-    justify-content: space-between;
+.Swap__Titulo__Completo {
+  border-bottom: 1px solid #e7e3eb;
+  padding: 24px;
+  text-align: center; }
 
-}
-.Swap__Icono{
+.Swap__Titulo {
+  display: flex;
+  justify-content: space-between; }
+  .Swap__Titulo .Swap__Icono {
     background-color: white;
     border: none;
     font-size: 20px;
     cursor: pointer;
-    padding: 4px;
-}
-.Swap__Titulo__Swap{
-    margin-left: 65px;
-}
-.Swap__Option{
+    padding: 4px; }
+  .Swap__Titulo__Swap {
+    margin-left: 65px; }
+
+.Swap__Container__Option {
+  padding: 24px; }
+  .Swap__Container__Option .Swap__Option {
     display: flex;
-    justify-content: space-between;
-}
-.Swap__Container__Option{
-    padding: 24px;
-}
-.Swap__Container__Amount{
+    justify-content: space-between; }
+  .Swap__Container__Option .Swap__Container__Amount {
     background-color: #fae3e5;
-    border-radius: 10px;        
-}
-.Swap__Max{
-    display: flex;
-    justify-content: flex-end;
-    padding: 12px 16px 12px 16px;
-}
-.Swap__Max__Estilo{
-    border: solid 1px rgb(40, 13, 95);
-    border-radius: 5px;
-}
-.Swap__Amount__0{
-    width: 100%;
-    text-align: right;
-    border: none;
-    background-color: #fae3e5;
-}
-.Swap__Button{
-    text-align: center;
-}
-.Swap__Button__Arrow{
+    border-radius: 10px; }
+    .Swap__Container__Option .Swap__Container__Amount .Swap__Max {
+      display: flex;
+      justify-content: flex-end;
+      padding: 12px 16px 12px 16px; }
+      .Swap__Container__Option .Swap__Container__Amount .Swap__Max .Swap__Amount__0 {
+        width: 100%;
+        text-align: right;
+        border: none;
+        background-color: #fae3e5; }
+      .Swap__Container__Option .Swap__Container__Amount .Swap__Max .Swap__Max__Estilo {
+        border: solid 1px #280d5f;
+        border-radius: 5px; }
+
+.Swap__Button {
+  text-align: center; }
+  .Swap__Button__Arrow {
     border: none;
     font-size: 30px;
     padding: 12px 0px 12px 0px;
-    background-color: white;
-}
-.Swap__Container__Sli{
-    display: flex;
-    justify-content: space-between;
-    padding: 12px 0px 34px 0px;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-.Swap__Button__Swap{
-    width: 100%;
-    border-radius: 16px;
-    padding: 10px 24px 10px 24px;
-    font-size: 16px;
-}
-/*Pika trader inicio*/
-article img{
-    width: 10%;
-}
-/*Pika trader fin*/
+    background-color: white; }
 
-
-/*Fin Swap*/
-
-.link__decoration {
-    text-decoration: none;
-    color: white;
-}
-
-.container__subnav {
-    margin-top: 60px;
-    padding: 1rem 1rem 0rem 1rem;
-}
-
-.subnav {
-    text-decoration: none;
-    color: black;
-    margin: 0px 5px 0px 5px;    
-    font-weight: bold;
-}
-
-.subnav__on {
-    color: #dc3545;
-    border-bottom: #dc3545 solid 4px;
-}
+.Swap__Container__Sli {
+  display: flex;
+  justify-content: space-between;
+  padding: 12px 0px 34px 0px;
+  margin-right: 10px;
+  margin-left: 10px; }
 
 .swap__back {
-    background-color: rgba(255, 240, 241, 0.741);
-}
+  background-color: rgba(255, 240, 241, 0.741); }
+
+/*Pika trader inicio*/
+article img {
+  width: 10%; }
 
 .img__pika {
-    display: flex;
-    justify-content: end;
-    align-items: center;
-}
-.img__globo {
+  display: flex;
+  justify-content: end;
+  align-items: center; }
+  .img__pika .img__globo {
     background-color: white;
     border-radius: 10px;
     padding: 1rem;
-    border: solid rgb(207, 207, 207) 0.1px;
+    border: solid #cfcfcf 0.1px;
     color: #dc3545;
-    text-decoration: none;
-}
-.img__globo:hover {
-    color: black;
-    background-color: yellow;
-}
+    text-decoration: none; }
+    .img__pika .img__globo:hover {
+      color: black;
+      background-color: yellow; }
 
-
+/*Pika trader fin*/
+/*Fin Swap*/
 /*Farm inicio*/
 .farm__titulo {
-    background-color: #fae3e5;
-    font-family: 'Roboto', sans-serif;
-    color: #dc3545;
-}
+  background-color: #fae3e5;
+  font-family: 'Roboto', sans-serif;
+  color: #dc3545; }
+
 .farm__titulo2 {
-    background-color: #d4effc;
-    font-family: 'Roboto', sans-serif;
-    color: #0dcaf0;
-}
+  background-color: #d4effc;
+  font-family: 'Roboto', sans-serif;
+  color: #0dcaf0; }
+
 .farm__container {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 30px;
-    margin: 2% auto 0% auto;
-    font-family: 'Roboto', sans-serif;
-    color: rgb(51, 0, 0);
-    width: 1120px;
-}
-.farm__grid{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  gap: 30px;
+  margin: 2% auto 0% auto;
+  font-family: 'Roboto', sans-serif;
+  color: #330000;
+  width: 1120px; }
+  .farm__container .farm__grid {
     padding: 1.5rem;
     border-radius: 2rem;
-    border: solid red 1px;
-}
-.farm__grid2{
-    padding: 1.5rem;
-    border-radius: 2rem;
-    border: solid #0dcaf0 1px;
-}
+    border: solid red 1px; }
+    .farm__container .farm__grid .farm__core {
+      border: solid 2px #dc3545;
+      color: #dc3545;
+      border-radius: 1rem;
+      padding: 4px 7px;
+      font-size: small; }
+
 .ball__bnb {
-    font-weight: bold;
-    font-size: 1.2rem;
-    text-align: end;
-}
-.farm__core {
-    border: solid 2px #dc3545;
-    color: #dc3545;
-    border-radius: 1rem;
-    padding: 4px 7px;
-    font-size: small;
-}
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: end; }
+
+.farm__grid2 {
+  padding: 1.5rem;
+  border-radius: 2rem;
+  border: solid #0dcaf0 1px; }
+
 .farm__core2 {
-    border: solid 2px #0dcaf0;
-    color: #0dcaf0;
-    border-radius: 1rem;
-    padding: 4px 7px;
-    font-size: small;
-}
+  border: solid 2px #0dcaf0;
+  color: #0dcaf0;
+  border-radius: 1rem;
+  padding: 4px 7px;
+  font-size: small; }
+
 .farm__40x {
-    color: white;
-    background-color: #dc3545;
-    border-radius: 1rem;
-    font-size:  medium;
-    padding: 4px 7px;
-}
+  color: white;
+  background-color: #dc3545;
+  border-radius: 1rem;
+  font-size: medium;
+  padding: 4px 7px; }
+
 .farm__40x2 {
-    color: white;
-    background-color: #0dcaf0;
-    border-radius: 1rem;
-    font-size:  medium;
-    padding: 4px 7px;
-}
+  color: white;
+  background-color: #0dcaf0;
+  border-radius: 1rem;
+  font-size: medium;
+  padding: 4px 7px; }
+
 .farm__div {
-    margin-top: 8px;
-    font-size: medium;
-}
+  margin-top: 8px;
+  font-size: medium; }
+
 .farm__rigth {
-    font-weight: bold;
-}
+  font-weight: bold; }
+
 .farm__div__earned {
-    font-size: small;
-    font-weight: bold;
-    margin-top: 15px;
-    color: #dc3545;
-}
+  font-size: small;
+  font-weight: bold;
+  margin-top: 15px;
+  color: #dc3545; }
+
 .farm__div__earned2 {
-    font-size: small;
-    font-weight: bold;
-    margin-top: 15px;
-    color: #0dcaf0;
-}
+  font-size: small;
+  font-weight: bold;
+  margin-top: 15px;
+  color: #0dcaf0; }
+
 .farm__grid:hover {
-    box-shadow: 0 0.1rem 0.4rem black;
-}
-@media only screen and (max-width: 1140px){
-    .farm__container {
-        grid-template-columns: auto auto;
-        width: 720px;
-    }
-    @media only screen and (max-width: 740px)
-    {
-        .farm__container {
-            grid-template-columns: auto;
-            width: 360px;
-        }
-    }
-}
+  box-shadow: 0 0.1rem 0.4rem black; }
+
+@media only screen and (max-width: 1140px) {
+  .farm__container {
+    grid-template-columns: auto auto;
+    width: 720px; } }
+
+@media only screen and (max-width: 1140px) and (max-width: 740px) {
+  .farm__container {
+    grid-template-columns: auto;
+    width: 360px; } }
