--- a/sass/views/_home.scss
+++ b/sass/views/_home.scss
@@ -7,20 +7,14 @@
 }
 
 .home {
-    position: absolute;
-    margin-left: 15%;
-    margin-top: 3%;
     &__gameboy {
-        width: 150%;
+      left: 15.25%;
+      top: 3%;
+      position: absolute;
+        width: 69.5%;
     }
 }
-.screen {
-  width: 590px; 
-  margin-top: 12.5%;
-  margin-left: 34.5%;
-  border-radius: 1rem;
-  border: solid black 6px;
-}
+
 
 /* codigo carrusel de w3school*/
 .mySlides {display: none}
@@ -29,18 +23,100 @@
 .slideshow-container {
   position: relative;
   margin: auto;
+
+  .screen {
+    width: 30%; 
+    margin-top: 12.5%;
+    margin-left: 34.5%;
+    border-radius: 1rem;
+    border: solid black 6px;
+  }
+  /* Next & previous buttons */
+  .arrow {
+    cursor: pointer;
+    position: absolute;
+    color: #828282;
+    background-color: #828282;
+    left: 24%;
+    top: 62.5%;
+    border: none;
+    text-decoration: none ;
+    &:hover{
+      color: rgb(68, 68, 68);
+      background-color: rgb(68, 68, 68);
+    }
+  }
+  .up {
+    top: 55.5%;
+    padding: 0.6% 1%;
+    border-radius: 15% 15% 0 0;
+    border-bottom: none;
+    border-top: solid 1.5px black;
+    border-left: solid 1.5px black;
+    border-right: solid 1.5px black;
+  }
+  .down {
+    padding: 0.6% 1%;
+    top: 69.5%;
+    border-radius: 0 0 15% 15%;
+    border-bottom: solid 1.5px black;
+    border-top: none;
+    border-left: solid 1.5px black;
+    border-right: solid 1.5px black;
+  }
+  .next {
+    padding: 0.6% 1.2% 0.6% 1%;
+    left: 26%;
+    border-radius: 0 15% 15% 0;
+    border-bottom: solid 1.5px black;
+    border-top: solid 1.5px black;
+    border-left: none;
+    border-right: solid 1.5px black;
+  }
+  .prev {
+    padding: 0.6% 1%;
+    left: 22%;
+    border-radius: 15% 0 0 15%  ;
+    border-bottom: solid 1.5px black;
+    border-top: solid 1.5px black;
+    border-left: solid 1.5px black;
+    border-right: none;
+  }
+  .enter {
+    padding: 0.7% 1%;
+    &:hover{
+      color: #828282;
+      background-color: #828282;
+    }
+  }
+  .button__ab {
+    background-color: #828282;
+    border-radius: 50%;
+    padding: 1.5%;
+    text-decoration: none;
+    color: #646464;
+    position: absolute;
+    &:hover {
+      background-color: #646464;
+      color: black;
+    }
+    &__a {
+      top: 52%;
+      left: 76%;
+    }
+    &__b {
+      top: 62%;
+      left: 71%;
+    }
+  }
+
+  
+  
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  user-select: none;
-}
 
-/* Position the "next button" to the right */
-.next {
-}
+
+
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
